--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div>
             <h1 class="about-heading">About Me</h1>
           </div>
-          <div><img src="C:\Users\subhashree patra\Pictures\Saved Pictures\profile_pic.jpg" height="20" width="20"></div>
+          <div><a href="https://ibb.co/93Vt3Yn"><img src="https://i.ibb.co/qFW5F1B/profile-pic.jpg" alt="profile-pic" style=" border:0;height:150; width:100;"></a></div>
           <p>
             I am 20 year old, Computer Science Engineering Student currently studying at Siksha 'o'Anusandhan Deemed to be University.
             I really enjoy solving problems as well as making things pretty and easy to use. I can't stop learning new
@@ -108,7 +108,7 @@
       </div>
       <div class="portfolio-content container">
         <div class="proj-1">
-          <img src="C:\Users\subhashree patra\Desktop\restaurant\WhatsApp Image 2023-09-06 at 11.54.37.jpg">
+          <a href="https://ibb.co/bsKfgQM"><img src="https://i.ibb.co/K2r1jbp/Screenshot-2023-09-06-115240.png" alt="Screenshot-2023-09-06-115240" style=" border:0"></a>
           <div class="proj1-details">
             <i class="fab fa-html5"></i>
             <i class="fab fa-css3-alt"></i>
@@ -123,7 +123,7 @@
         </div>
 
         <div class="proj-2">
-          <img src="C:\Users\subhashree patra\Desktop\glass_login\WhatsApp Image 2023-09-06 at 11.55.55.jpg">
+          <a href="https://ibb.co/Kjq6fnm"><img src="https://i.ibb.co/zhRsBdN/Whats-App-Image-2023-09-06-at-11-55-55.jpg" alt="Whats-App-Image-2023-09-06-at-11-55-55" style="border:0"></a>
           <div class="proj2-details">
             <i class="fab fa-html5"></i>
             <i class="fab fa-css3-alt"></i>
